[package]
name = "webforms"
version = "0.2.1"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
edition = "2018"

[features]
default = ["validate", "html"]
validate = []
html = []

[dependencies]
webforms_derive = { path = "../webforms_derive" }

[dev-dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
