[package]
name = "webforms"
version = "0.2.1"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
edition = "2018"
description = "Provides form validation for web forms"
repository = "https://github.com/kvnallsn/webforms"
license = "MIT"
keywords = ["web", "form", "html", "validate"]
categories = ["web-programming"]


[features]
default = ["validate", "html"]
validate = []
html = []

[dependencies]
webforms_derive = "0.2.1"

[dev-dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
