[package]
name = "webforms_derive"
version = "0.2.1"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
edition = "2018"
description = "Proc-Macro derive implementation for WebForms.  Should not depend on this crate, should depend on webforms instead"
repository = "https://github.com/kvnallsn/webforms"
license = "MIT"
keywords = ["web", "form", "html", "validate"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
rand = "0.6"
syn = { version = "0.15.23", features = ["derive"] }
quote = "0.6.10"
proc-macro2 = "0.4"
lazy_static = "1.2.0"
toml = "0.4.10"
serde = "1.0"
serde_derive = "1.0"
